# epidemic-sim

./: README.md  pyproject.toml  requirements.txt
src/: main.py
